Wed Sep  5 19:48:34 2001  Priyanka Gontla  <pgontla@ece.uci.edu>

	* ace/SOCK_Dgram.cpp (set_nic): 
	  Fixed the errors that raised in Win.

Wed Sep  5 20:38:10 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/OS.h:
	* ace/OS.i:
	* ace/QoS/QoS_Session_Impl.cpp:
	* ace/QoS/QoS_Session.h: Reverted the change "Wed Sep  5 18:58:00
	  2001 Yamuna Krishnamurthy  <yamuna@cs.wustl.edu>". The change
	  broke builds. Further there was no reason why the QoS
	  information should come inside OS.* files. Talk about increasing
	  foot print.

Wed Sep  5 18:58:00 2001 Yamuna Krishnamurthy  <yamuna@cs.wustl.edu>

	* ace/QoS/QoS_Session.h: 
	* ace/QoS/QoS_Session_Impl.h: 	
	* ace/QoS/QoS_Session_Impl.cpp:

	  Added rapi_sender and rapi_reserve calls with null tspec and
	  flow spec respectively to facilitate the tearing down of PATH
	  and RESV messages.  
	
	* ace/OS.h: 
	* ace/OS.i:

	  Changed the sending_flowspec_ and receiving_flowspec_ members of
	  the ACE_QoS class to pointers so they can be initialized to null
	  flow specs. 

Wed Sep  5 16:50:03 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* THANKS: Added Peter Phillips <pphillip@opentext.com> to the hall
	  of fame.

	* ace/OS_String.cpp: Fixed a warning in TRU64 builds.

Wed Sep  5 11:29:59 2001  Priyanka Gontla  <pgontla@ece.uci.edu>

	* ace/SOCK_Dgram.h:
	* ace/SOCK_Dgram.cpp:

	  Added a new method to set the NIC address in the socket.

Wed Sep 05 12:00:42 2001  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix4_g++.GNU: Sets ACE_AIX_VERS rather
          than separate major/minor; see entry below for further info.

Wed Sep 05 11:52:39 2001  Steve Huston  <shuston@riverace.com>

        * ace/config-aix5.1.h: New config file for AIX 5L, version 5.1,
          using Visual Age C++ 5.

        * ace/config-aix-4.1.x.h:
        * ace/config-aix-4.2.x.h:
        * ace/config-aix-4.3.x.h:
        * ace/config-aix-4.x.h: Use ACE_AIX_VERS (which has both major and