@@ -1,0 +1,3 @@
+MAKEFILES = export_dll.bor test.bor
+
+!include <$(ACE_ROOT)\include\makeinclude\recurse.bor>
