@@ -1,0 +1,11 @@
+NAME = test
+
+OBJFILES = $(OBJDIR)\$(NAME).obj
+
+CFLAGS = $(ACE_CFLAGS)
+
+CPPDIR = .
+
+LIBFILES = $(ACE_LIB) $(CORE_BINDIR)\export_dll$(LIB_DECORATOR).lib
+
+!include <$(ACE_ROOT)\include\makeinclude\build_exe.bor>
